style.css
body {
    margin: 5px;
    padding: 0;
    background-color: #f5fffd;
    color: #442244;
    font-family: Arial, sans-serif;
    font-size: 25px;
    user-select: none;
}

.green {
    background: #64df85!important;
}

.red {
    background: #ff8373!important;
}

.white {
    background: white!important;
}

.user-output {
    background: rgb(123, 207, 255)!important;
}

.text-center {
    text-align: center;
}

.global-grid-container {
    display: grid;
    justify-content: space-around;

    grid-gap: 10px;
    grid-template-columns: 44% 10% 44%;
}

.global-grid-container > div {
    background-color: rgb(240,248,255);
    transition: all 1s ease-out;
}

.block {
    height: calc(100vh - 1em);
    border: 1px dashed darkblue;
    transition: all 1s ease-out;
}

#right {
    background-color: #82d1d1;
}

#left {
    overflow: auto;
    background-color: #e0fffa;
}

#middle {
    overflow: hidden;
}

#left > p {
    margin-top: 0;
    margin-bottom: 5px;
    padding: 15px;
    transition: all 0.3s ease-out;
}

#left > p:hover {
    background: rgba(255, 255, 255)!important;
    color: black;
}

#left > p.user-output:hover {
    background: rgb(64, 161, 218)!important;
}

.buttons-container {
    display: grid;

    grid-template-columns: auto;
}

.buttons-container > div {
    width: 100%;
    padding: 10px 0;
    background-color: #c5ffff;
    text-align: center;
    transition: all 0.1s ease-out;
}

#turns {
    display: none;
    background-color: rgb(240,248,255);
}

#play {
    background-color: #64df85;
}

#surrender {
    display: none;
    background-color: #ff8373;
}

.buttons-container > div {
    cursor: pointer;
}

.buttons-container > div:hover {
    opacity: 0.8;
}

.grid-container {
    display: grid;
    padding: 20px;

    grid-gap: 10px 20px;
    grid-template-columns: auto auto auto;
}

.grid-container > div {
    padding: 20px 0;
    background-color: #c5ffff;
    text-align: center;
    transition: all 0.1s ease-out;
    transform: scale(1);
}

.f {
    height: 74px;
    transition: all 0.5s ease-out;

    grid-template-columns: auto auto auto auto;
}

.f > div:hover {
    transform: scale(1.1);
}

.n {
    overflow: hidden;
    padding-top: 50px;
}

.n > div {
    cursor: pointer;
}

.n > div:after {
    content: '';
    position: absolute;
    top: -10px;
    right: -10px;
    opacity: 0;
    transition: 0.5s;
    transform: rotate(35deg);
}

.n > div.questionable {
    position: relative;
    background: rgb(255, 223, 80);
}

.n > div.questionable:after {
    content: '❓';
    top: 0;
    right: 0;
    opacity: 1;
}

.n > div.rejected {
    background: tomato;
}

.n > div.rejected:after {
    content: '⛔';
    top: 0;
    right: 0;
    opacity: 1;
}

.n > div.ok {
    background: rgb(138, 255, 71);
}

.n > div.ok:after {
    content: '👌';
    top: 0;
    right: 0;
    opacity: 1;
}

.n > div:hover {
    background: white;
    transform: scale(1.12);
}

.n > div.questionable:hover {
    background: rgb(255, 229, 115);
}

.n > div.rejected:hover {
    background: rgb(255, 139, 118);
}

.n > div.ok:hover {
    background: rgb(172, 255, 124);
}

#lastp {
    background-color: #c2f2f2;
}

#info {
    background-color: royalblue;
    color: white;
}

@media screen and (max-width: 1024px) {
    body {
        font-size: 20px;
    }
}

@media screen and (max-width: 767px) {
    body {
        overflow: hidden;
        font-size: 18px;
    }

    .global-grid-container {
        display: block;
    }

    #left {
        height: 44vh;
    }

    #middle {
        height: 10vh;
    }

    #right {
        display: flex;
        flex-direction: row;
        height: 44vh;
        padding: 0 20px;
    }

    #right .f {
        display: flex;
        align-items: center;
        flex: 0 0 20%;
        flex-direction: column;
        justify-content: space-around;
        height: 100%;
        padding: 0;
    }

    #right .f div {
        width: 80%;
        height: 5%;
    }

    #right .n {
        display: flex;
        align-items: center;
        flex: 0 0 80%;
        flex-wrap: wrap;
        justify-content: flex-end;
        padding: 0 10px 0 0;
    }

    #right .n div {
        display: flex;
        align-items: center;
        justify-content: space-around;
        width: 23%;
        height: 20%;
        padding: 0;
    }

    .buttons-container {
        display: flex;
    }

    #left > p:active {
        background: rgba(255, 255, 255);
        color: black;
    }

    .buttons-container > div:active {
        opacity: 0.8;
    }

    .f > div:active {
        transform: scale(1.1);
    }

    .n > div:active {
        background: white;
        transform: scale(1.12);
    }
}

